# claude-code-essentials

./: .gitignore  .worktreeinclude  404.html  CLAUDE.md  Makefile  app.py  cdk.json  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: cdk-deploy.yml  docs.yml
architecture/: index.html
docs/: architecture.md  getting-started.md  index.md
docs/guides/: bootstrap.md  multi-region.md  new-construct.md  new-resource.md  new-stack.md
docs/reference/: cicd.md  environments.md  global-vs-regional.md  stacks.md
getting-started/: index.html
guides/bootstrap/: index.html
guides/multi-region/: index.html
guides/new-construct/: index.html
guides/new-resource/: index.html
guides/new-stack/: index.html
infra/config/: accounts.py
infra/constructs/: security.py  vpc.py
infra/stacks/: global_stack.py  networking_stack.py  platform_stack.py
reference/cicd/: index.html
reference/environments/: index.html
reference/global-vs-regional/: index.html
reference/stacks/: index.html
scripts/: bootstrap.sh
search/: search_index.json
tests/unit/: test_global_stack.py  test_networking_stack.py  test_platform_stack.py
